// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`translations-utils > formatMessageValues > formaterer <nowrap> 1`] = `
<DocumentFragment>
  lorem
  <span
    class="nowrap"
  >
    ipsum
  </span>
  dolor
</DocumentFragment>
`;

exports[`translations-utils > formatMessageValues > formaterer <strong> 1`] = `
<DocumentFragment>
  lorem
  <strong>
    ipsum
  </strong>
  dolor
</DocumentFragment>
`;

exports[`translations-utils > formatMessageValues > formaterer {br} til <br/> 1`] = `
<DocumentFragment>
  lorem
  <br />
  ipsum
  <br />
  <br />
  dolor
</DocumentFragment>
`;
